parser/y64asm_parser.go
// Code generated from Y64asm.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // Y64asm

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'('", "')'", "':'", "','", "", "", "", "", "", "", "", "", "", "",
	"'ret'", "'call'", "'halt'",
}
var symbolicNames = []string{
	"", "", "", "", "", "PREPROC", "OP", "IOP", "REG", "MOV", "IRMOV", "RRMOV",
	"MRMOV", "RMMOV", "JMP", "RET", "CALL", "HALT", "NUM", "ID", "NL", "WS",
	"LINE_COMMENT",
}

var ruleNames = []string{
	"prog", "line", "refer", "stmt", "preproc", "label", "instr0", "instr1",
	"instr2", "instr",
}

type Y64asmParser struct {
	*antlr.BaseParser
}

// NewY64asmParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *Y64asmParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewY64asmParser(input antlr.TokenStream) *Y64asmParser {
	this := new(Y64asmParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Y64asm.g4"

	return this
}

// Y64asmParser tokens.
const (
	Y64asmParserEOF          = antlr.TokenEOF
	Y64asmParserT__0         = 1
	Y64asmParserT__1         = 2
	Y64asmParserT__2         = 3
	Y64asmParserT__3         = 4
	Y64asmParserPREPROC      = 5
	Y64asmParserOP           = 6
	Y64asmParserIOP          = 7
	Y64asmParserREG          = 8
	Y64asmParserMOV          = 9
	Y64asmParserIRMOV        = 10
	Y64asmParserRRMOV        = 11
	Y64asmParserMRMOV        = 12
	Y64asmParserRMMOV        = 13
	Y64asmParserJMP          = 14
	Y64asmParserRET          = 15
	Y64asmParserCALL         = 16
	Y64asmParserHALT         = 17
	Y64asmParserNUM          = 18
	Y64asmParserID           = 19
	Y64asmParserNL           = 20
	Y64asmParserWS           = 21
	Y64asmParserLINE_COMMENT = 22
)

// Y64asmParser rules.
const (
	Y64asmParserRULE_prog    = 0
	Y64asmParserRULE_line    = 1
	Y64asmParserRULE_refer   = 2
	Y64asmParserRULE_stmt    = 3
	Y64asmParserRULE_preproc = 4
	Y64asmParserRULE_label   = 5
	Y64asmParserRULE_instr0  = 6
	Y64asmParserRULE_instr1  = 7
	Y64asmParserRULE_instr2  = 8
	Y64asmParserRULE_instr   = 9
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) AllLine() []ILineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ILineContext)(nil)).Elem())
	var tst = make([]ILineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ILineContext)
		}
	}

	return tst
}

func (s *ProgContext) Line(i int) ILineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *Y64asmParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, Y64asmParserRULE_prog)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<Y64asmParserPREPROC)|(1<<Y64asmParserOP)|(1<<Y64asmParserIOP)|(1<<Y64asmParserIRMOV)|(1<<Y64asmParserRRMOV)|(1<<Y64asmParserMRMOV)|(1<<Y64asmParserRMMOV)|(1<<Y64asmParserJMP)|(1<<Y64asmParserRET)|(1<<Y64asmParserCALL)|(1<<Y64asmParserHALT)|(1<<Y64asmParserID)|(1<<Y64asmParserNL))) != 0 {
		{
			p.SetState(20)
			p.Line()
		}

		p.SetState(25)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_line
	return p
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) Stmt() IStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *LineContext) NL() antlr.TerminalNode {
	return s.GetToken(Y64asmParserNL, 0)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitLine(s)
	}
}

func (p *Y64asmParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, Y64asmParserRULE_line)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.Stmt()
	}
	p.SetState(28)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(27)
			p.Match(Y64asmParserNL)
		}

	}

	return localctx
}

// IReferContext is an interface to support dynamic dispatch.
type IReferContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsReferContext differentiates from other interfaces.
	IsReferContext()
}

type ReferContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyReferContext() *ReferContext {
	var p = new(ReferContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_refer
	return p
}

func (*ReferContext) IsReferContext() {}

func NewReferContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ReferContext {
	var p = new(ReferContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_refer

	return p
}

func (s *ReferContext) GetParser() antlr.Parser { return s.parser }

func (s *ReferContext) NUM() antlr.TerminalNode {
	return s.GetToken(Y64asmParserNUM, 0)
}

func (s *ReferContext) REG() antlr.TerminalNode {
	return s.GetToken(Y64asmParserREG, 0)
}

func (s *ReferContext) ID() antlr.TerminalNode {
	return s.GetToken(Y64asmParserID, 0)
}

func (s *ReferContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ReferContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ReferContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterRefer(s)
	}
}

func (s *ReferContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitRefer(s)
	}
}

func (p *Y64asmParser) Refer() (localctx IReferContext) {
	localctx = NewReferContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, Y64asmParserRULE_refer)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(35)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case Y64asmParserNUM:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(30)
			p.Match(Y64asmParserNUM)
		}

	case Y64asmParserT__0:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(31)
			p.Match(Y64asmParserT__0)
		}
		{
			p.SetState(32)
			p.Match(Y64asmParserREG)
		}
		{
			p.SetState(33)
			p.Match(Y64asmParserT__1)
		}

	case Y64asmParserID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(34)
			p.Match(Y64asmParserID)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) Label() ILabelContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILabelContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *StmtContext) Instr() IInstrContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInstrContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInstrContext)
}

func (s *StmtContext) Preproc() IPreprocContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPreprocContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPreprocContext)
}

func (s *StmtContext) NL() antlr.TerminalNode {
	return s.GetToken(Y64asmParserNL, 0)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (p *Y64asmParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, Y64asmParserRULE_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(41)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case Y64asmParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(37)
			p.Label()
		}

	case Y64asmParserOP, Y64asmParserIOP, Y64asmParserIRMOV, Y64asmParserRRMOV, Y64asmParserMRMOV, Y64asmParserRMMOV, Y64asmParserJMP, Y64asmParserRET, Y64asmParserCALL, Y64asmParserHALT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(38)
			p.Instr()
		}

	case Y64asmParserPREPROC:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(39)
			p.Preproc()
		}

	case Y64asmParserNL:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(40)
			p.Match(Y64asmParserNL)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPreprocContext is an interface to support dynamic dispatch.
type IPreprocContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPreprocContext differentiates from other interfaces.
	IsPreprocContext()
}

type PreprocContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPreprocContext() *PreprocContext {
	var p = new(PreprocContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_preproc
	return p
}

func (*PreprocContext) IsPreprocContext() {}

func NewPreprocContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PreprocContext {
	var p = new(PreprocContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_preproc

	return p
}

func (s *PreprocContext) GetParser() antlr.Parser { return s.parser }

func (s *PreprocContext) PREPROC() antlr.TerminalNode {
	return s.GetToken(Y64asmParserPREPROC, 0)
}

func (s *PreprocContext) NUM() antlr.TerminalNode {
	return s.GetToken(Y64asmParserNUM, 0)
}

func (s *PreprocContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PreprocContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PreprocContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterPreproc(s)
	}
}

func (s *PreprocContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitPreproc(s)
	}
}

func (p *Y64asmParser) Preproc() (localctx IPreprocContext) {
	localctx = NewPreprocContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, Y64asmParserRULE_preproc)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(Y64asmParserPREPROC)
	}
	{
		p.SetState(44)
		p.Match(Y64asmParserNUM)
	}

	return localctx
}

// ILabelContext is an interface to support dynamic dispatch.
type ILabelContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLabelContext differentiates from other interfaces.
	IsLabelContext()
}

type LabelContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLabelContext() *LabelContext {
	var p = new(LabelContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_label
	return p
}

func (*LabelContext) IsLabelContext() {}

func NewLabelContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LabelContext {
	var p = new(LabelContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_label

	return p
}

func (s *LabelContext) GetParser() antlr.Parser { return s.parser }

func (s *LabelContext) ID() antlr.TerminalNode {
	return s.GetToken(Y64asmParserID, 0)
}

func (s *LabelContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LabelContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LabelContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterLabel(s)
	}
}

func (s *LabelContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitLabel(s)
	}
}

func (p *Y64asmParser) Label() (localctx ILabelContext) {
	localctx = NewLabelContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, Y64asmParserRULE_label)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Match(Y64asmParserID)
	}
	{
		p.SetState(47)
		p.Match(Y64asmParserT__2)
	}

	return localctx
}

// IInstr0Context is an interface to support dynamic dispatch.
type IInstr0Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstr0Context differentiates from other interfaces.
	IsInstr0Context()
}

type Instr0Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstr0Context() *Instr0Context {
	var p = new(Instr0Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_instr0
	return p
}

func (*Instr0Context) IsInstr0Context() {}

func NewInstr0Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Instr0Context {
	var p = new(Instr0Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_instr0

	return p
}

func (s *Instr0Context) GetParser() antlr.Parser { return s.parser }

func (s *Instr0Context) RET() antlr.TerminalNode {
	return s.GetToken(Y64asmParserRET, 0)
}

func (s *Instr0Context) HALT() antlr.TerminalNode {
	return s.GetToken(Y64asmParserHALT, 0)
}

func (s *Instr0Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Instr0Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Instr0Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterInstr0(s)
	}
}

func (s *Instr0Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitInstr0(s)
	}
}

func (p *Y64asmParser) Instr0() (localctx IInstr0Context) {
	localctx = NewInstr0Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, Y64asmParserRULE_instr0)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		_la = p.GetTokenStream().LA(1)

		if !(_la == Y64asmParserRET || _la == Y64asmParserHALT) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IInstr1Context is an interface to support dynamic dispatch.
type IInstr1Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstr1Context differentiates from other interfaces.
	IsInstr1Context()
}

type Instr1Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstr1Context() *Instr1Context {
	var p = new(Instr1Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_instr1
	return p
}

func (*Instr1Context) IsInstr1Context() {}

func NewInstr1Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Instr1Context {
	var p = new(Instr1Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_instr1

	return p
}

func (s *Instr1Context) GetParser() antlr.Parser { return s.parser }

func (s *Instr1Context) JMP() antlr.TerminalNode {
	return s.GetToken(Y64asmParserJMP, 0)
}

func (s *Instr1Context) Refer() IReferContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IReferContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IReferContext)
}

func (s *Instr1Context) CALL() antlr.TerminalNode {
	return s.GetToken(Y64asmParserCALL, 0)
}

func (s *Instr1Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Instr1Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Instr1Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterInstr1(s)
	}
}

func (s *Instr1Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitInstr1(s)
	}
}

func (p *Y64asmParser) Instr1() (localctx IInstr1Context) {
	localctx = NewInstr1Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, Y64asmParserRULE_instr1)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(55)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case Y64asmParserJMP:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(51)
			p.Match(Y64asmParserJMP)
		}
		{
			p.SetState(52)
			p.Refer()
		}

	case Y64asmParserCALL:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(53)
			p.Match(Y64asmParserCALL)
		}
		{
			p.SetState(54)
			p.Refer()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IInstr2Context is an interface to support dynamic dispatch.
type IInstr2Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstr2Context differentiates from other interfaces.
	IsInstr2Context()
}

type Instr2Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstr2Context() *Instr2Context {
	var p = new(Instr2Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Y64asmParserRULE_instr2
	return p
}

func (*Instr2Context) IsInstr2Context() {}

func NewInstr2Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Instr2Context {
	var p = new(Instr2Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Y64asmParserRULE_instr2

	return p
}

func (s *Instr2Context) GetParser() antlr.Parser { return s.parser }

func (s *Instr2Context) OP() antlr.TerminalNode {
	return s.GetToken(Y64asmParserOP, 0)
}

func (s *Instr2Context) AllREG() []antlr.TerminalNode {
	return s.GetTokens(Y64asmParserREG)
}

func (s *Instr2Context) REG(i int) antlr.TerminalNode {
	return s.GetToken(Y64asmParserREG, i)
}

func (s *Instr2Context) IOP() antlr.TerminalNode {
	return s.GetToken(Y64asmParserIOP, 0)
}

func (s *Instr2Context) Refer() IReferContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IReferContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IReferContext)
}

func (s *Instr2Context) IRMOV() antlr.TerminalNode {
	return s.GetToken(Y64asmParserIRMOV, 0)
}

func (s *Instr2Context) RRMOV() antlr.TerminalNode {
	return s.GetToken(Y64asmParserRRMOV, 0)
}

func (s *Instr2Context) MRMOV() antlr.TerminalNode {
	return s.GetToken(Y64asmParserMRMOV, 0)
}

func (s *Instr2Context) RMMOV() antlr.TerminalNode {
	return s.GetToken(Y64asmParserRMMOV, 0)
}

func (s *Instr2Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Instr2Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Instr2Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.EnterInstr2(s)
	}
}

func (s *Instr2Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Y64asmListener); ok {
		listenerT.ExitInstr2(s)
	}
}

func (p *Y64asmParser) Instr2() (localctx IInstr2Context) {
	localctx = NewInstr2Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 16, Y64asmParserRULE_instr2)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()
